--- a/media-gallery/web/mediagallery.html
+++ b/media-gallery/web/mediagallery.html
@@ -17,13 +17,14 @@
         </p>
         <div id="container">
             <div id="list">
-            <select id="GalleryList" size="10" style="width:100%; height:100%">
-            </select>
+              <select id="GalleryList" size="10"></select>
             </div>
             <div id="content"></div>
         </div>
         
-        <script src="packages/chrome/bootstrap.js" defer></script>
-        <script src="mediagallery.dart" type="application/dart"></script> 
+        <!--  <script src="packages/chrome/bootstrap.js" defer></script>
+        <script src="mediagallery.dart" type="application/dart"></script> -->
+        
+        <script src="mediagallery.dart.precompiled.js" type="text/javascript"></script>
     </body>
 </html>
