--- a/media-gallery/web/mediagallery.html
+++ b/media-gallery/web/mediagallery.html
@@ -22,9 +22,9 @@
             <div id="content"></div>
         </div>
         
-        <!--  <script src="packages/chrome/bootstrap.js" defer></script>
-        <script src="mediagallery.dart" type="application/dart"></script> -->
+        <script src="packages/chrome/bootstrap.js" defer></script>
+        <script src="mediagallery.dart" type="application/dart"></script>
         
-        <script src="mediagallery.dart.precompiled.js" type="text/javascript"></script>
+        <!--  <script src="mediagallery.dart.precompiled.js" type="text/javascript"></script> -->
     </body>
 </html>
